overflow bugs

--- a/assets/css/vent.css
+++ b/assets/css/vent.css
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
+    overflow: hidden;
 	top: 0;
 	left: 0;
 	right: 0;
